--- a/心得.md
+++ b/心得.md
@@ -1,3 +1,51 @@
 规则大于灵感，人际关系大于规则，利益大于人际关系
 
-初次涨停 必会迎来进一步的涨势 吸引人进场；可以不在潮起前进场 不要在潮落后退场
+初次涨停 必会迎来进一步的涨势 吸引人进场；可以不在潮起前进场 不要在潮落后退场.
+
+
+
+11/3
+
+做短线，最重要的是趁势。敏捷：感知+果断。
+
+不要做股东（一直留恋于一只，幻想可以一直涨）
+
+选一只好股，2、3天为限，止盈/亏为唯一原则
+
+强中选强、放量进场；
+ 盈亏止定、不看预想；
+ 三天不动、立刻退场。
+
+--------------------------------------------------------------------------------------------------------------------------------------------------------
+
+短线交易讲究的是“跟随资金”。
+ 你不能凭感觉选股，而要看哪只股票**有资金在动**。
+
+放量说明两件事：
+
+1. 有人真在买（价格不是被偶然推上去的）；
+2. 走势更可靠（不容易被轻易砸下来）。
+
+所以短线选股时常用一句话：
+
+> “量在价先，有量才有价。”
+>  意思是：成交量的变化，往往比价格提前反映出行情的动向。
+
+------
+
+## 判断是否“放量”
+
+简单方法：
+
+- 看当日成交量柱（K线下方的红蓝柱状图）。
+- 与前5天均量比较：
+  - 如果比5日均量高出 **1.5倍或以上**，就算“放量”；
+  - 如果差不多持平，叫“平量”；
+  - 明显减少，叫“缩量”。
+
+------
+
+### ✅ 小结一句话：
+
+> **放量** = 成交量突然变大。
+>  **放量上涨**表示多头力量强，资金在积极进入，是短线关注信号。
