--- a/止损&盈率.md
+++ b/止损&盈率.md
@@ -10,9 +10,9 @@
 
 
 
-![041D02F778C785D60D9060DADFA6F43A](./img/041D02F778C785D60D9060DADFA6F43A.png)
+- **止损的意义**
 
-- ## **止损的意义**
+![041D02F778C785D60D9060DADFA6F43A](./img/041D02F778C785D60D9060DADFA6F43A.png)
 
 ### 1️⃣ 防止“亏损雪崩效应”
 
