--- a/止损&盈率.md
+++ b/止损&盈率.md
@@ -4,9 +4,11 @@
 
 态度：卖得坚决，买得谨慎。
 
-止损：3%，一旦触发 即刻出手
+止损：-3%，一旦触发 即刻出手
 
-止盈：6%~10%
+安全：+3%，不亏不赚
+
+止盈：+6%~10%，慎之再慎
 
 
 
@@ -50,5 +52,25 @@
 
 ![A168AE7C30D749E53841CDC6286BDBCD](./img/A168AE7C30D749E53841CDC6286BDBCD.png)
 
-​	
+----
+
+- **止盈**
+  - 勿拖，3~4天
+  - 勿幻想
+  - 达线必交易
+  - 先快后慢，主力先跑，余部断后
+
+追高要趁早（第一天最佳,越迟风险越大）
+
+低位进：（难得）
+
+1. 升：（看上限10%）多手慢出，升得越快 出得越慢，（至2，开降）
+2. 升降：此时 “主力”已出，余部看底线 以高点为起点进行止损
+
+高位进：（风险大）
+
+- 及格6% 则出主力
+- 若升 慢出；若降  低位+6%~高位-3%
+- 如若反应不及时 被套牢，低位+3% 平仓
+- 不要一手低 再一手高，会拖垮主力跑不及时
 
